# yt-video-note

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: main.py  transcriber.py  ui.py  video_screenshot.py  yt_downloader.py
src/agents/: video_screenshot_time_picker.py  video_summit_note.py
